kubernetes/apps/monitoring/victoria-logs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - victoria-logs.${SECRET_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302
      matches:
        - path:
            type: Exact
            value: /
    - backendRefs:
        - name: victoria-logs-server
          port: 9428
      matches:
        - path:
            type: PathPrefix
            value: /
