kubernetes/apps/monitoring/victoria-logs/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: victoria-logs-auth
  namespace: monitoring
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: victoria-logs-server
  extAuth:
    headersToExtAuth:
      - cookie
    http:
      backendRef:
        name: authentik-server
        namespace: default
        port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - cookie
        - set-cookie
        - x-authentik-username
        - x-authentik-groups
        - x-authentik-email
        - x-authentik-name
        - x-authentik-uid
